--- a/website/src/app/components/dialog/dialog.component.html
+++ b/website/src/app/components/dialog/dialog.component.html
@@ -16,8 +16,16 @@
 	</div>
 	<br><hr id="hr-dialog">
 	<h2 id="type-dialog">Albums</h2>
-    <div *ngIf="show" class="show-dialog" id="show-dialog">
-        <p>{{album.name}}</p>
+    <div *ngIf="show"  id="show-dialog">
+        <div id="show-album-dialog">
+            <img src="{{album.imageLink}}" alt="Chosen album">
+            <div id="album-info-dialog">
+                <h4>Album</h4>
+                <h3>{{album.name}}</h3>
+            </div>
+
+        </div>
+
     </div>
 	<div id="modal-album-dialog">
 		<div *ngFor="let album of data[1];" class="album-info-dialog">
