Integrate SongsDialog into the ordinary dialog

--- a/website/src/app/components/dialog/dialog.component.css
+++ b/website/src/app/components/dialog/dialog.component.css
@@ -24,6 +24,11 @@
     color: rgb(156, 43, 66);
 }
 
+#type-dialog2 {
+    color: rgb(156, 43, 66);
+}
+
+
 #genres-dialog {
 	margin-top: 0;
 	margin-bottom: 0;
@@ -129,6 +134,36 @@
     margin-top: 10%;
     margin-bottom: 0;
 
+}
+.song-img-dialog {
+    width: 50px;
+    height: 100%;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+.song-dialog {
+    display: flex;
+    height: 50px;
+    flex-direction: row;
+    box-shadow: 0 0 20px -4px rgba(0,0,0,0.20);
+    margin-bottom: 10px;
+
+}
+.song-dialog:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+#information-song-dialog {
+    display: flex;
+    flex-direction: row;
+}
+#information-song-dialog #title{
+    margin-left: 60px;
+    width: 35%;
+}
+.song-dialog .title{
+    width: 35%;
 }
 
 @media screen and (max-width: 480px) {
