Albums has track dialog view

--- a/website/src/app/components/album/album.component.html
+++ b/website/src/app/components/album/album.component.html
@@ -6,7 +6,7 @@
     <p class="track-info">{{album.songs ? album.songs.length : 0}} songs</p>
     <div class="bottom-buttons">
         <div class="bottom-button">
-            <span (click)="openDialog()">tracks</span>
+            <span (click)="openDialog('tracks')">tracks</span>
         </div>
     </div>
 </div>
