--- a/website/src/app/components/register/register.component.html
+++ b/website/src/app/components/register/register.component.html
@@ -1,6 +1,7 @@
 <div class="container">
 	<div class="wrapper">
 		<form (ngSubmit)="onSubmit()" class="form">
+			<h1>Register User</h1>
 			<p class="gray">Fill in your desired username and password to create a user </p>
 			<p id="errorText">{{result}}</p>
 			<label>Username</label>
