start implementing wordcloud to profilepage, look at mobile scalability

--- a/website/src/app/components/wordcloud/wordcloud.component.html
+++ b/website/src/app/components/wordcloud/wordcloud.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <ng-template #displayMessage>
-        <p>Could not make a wordcloud for your genres since you are not following any artists!</p>
+        <p>Are you logged in?</p>
+        <p>We could not make a wordcloud for your genres since you are not following any artists!</p>
     </ng-template>
-
 </div>
