--- a/website/src/app/components/my-info/my-info.component.html
+++ b/website/src/app/components/my-info/my-info.component.html
@@ -12,5 +12,9 @@
             <h2>Favorite Artists</h2>
             <favorite-artists></favorite-artists>
         <div>
+        <div>
+            <h2>Your favorite genres</h2>
+            <wordcloud></wordcloud>
+        </div>
     </div>
 </div>
