--- a/website/src/assets/styles/sharedStyles/search-result-element.css
+++ b/website/src/assets/styles/sharedStyles/search-result-element.css
@@ -17,7 +17,7 @@
     width: 100px;
     height: 100px;
     overflow: hidden;
-    border-radius: 5px;
+    border-radius: 50%;
     border: 5px solid white;
     -webkit-box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.5);
@@ -56,3 +56,8 @@
     font-size: 13px;
     cursor: pointer;
 }
+.border-right {
+    border-right: 1px solid rgba(0,0,0,0.1);
+}
+
+
