Loading real data for each album and change css scaling

--- a/website/src/app/components/dialog-table/dialog-table.component.css
+++ b/website/src/app/components/dialog-table/dialog-table.component.css
@@ -9,3 +9,12 @@
     overflow: auto;
     max-height: 200px;
 }
+
+
+
+@media screen and (max-width: 480px) {
+    .mat-column-duration {
+        display: none;
+    }
+
+}
