--- a/website/src/app/components/dialog-table/dialog-table.component.html
+++ b/website/src/app/components/dialog-table/dialog-table.component.html
@@ -5,14 +5,14 @@
               The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Title Column -->
-        <ng-container matColumnDef="title">
+        <ng-container matColumnDef="name">
             <mat-header-cell *matHeaderCellDef> Title </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.title}} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
         </ng-container>
         <!-- Duration Column -->
         <ng-container matColumnDef="duration">
             <mat-header-cell *matHeaderCellDef> Duration </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.duration}} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{element.duration[0]}} min {{element.duration[1]}} sek </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
