--- a/website/src/app/components/my-info/my-info.component.css
+++ b/website/src/app/components/my-info/my-info.component.css
@@ -11,39 +11,52 @@
 }
 
 .search-container {
-  background-color: white;
-  width: auto;
-  padding: 20px;
-  border: 1px solid rgba(0,0,0,0.1);
-  border-radius: 5px;
-  margin: 10px;
-  margin-bottom: 30px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.deleteButton{
-    width: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border: 1px solid rgba(5,0,0,0.3);
+    background-color: white;
+    width: auto;
+    padding: 20px;
+    border: 1px solid rgba(0,0,0,0.1);
     border-radius: 5px;
+    margin: 10px;
+    margin-bottom: 30px;
     text-align: center;
-    font-family: "Intro Rust", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .info-wrapper h1{
-  margin: 0;
-  margin-bottom: 20px;
-  font-family: "Intro Rust", sans-serif;
-  color: #5a5a5a;
+    margin: 0;
+    margin-bottom: 20px;
+    font-family: "Intro Rust", sans-serif;
+    color: #5a5a5a;
 }
 
 .info-wrapper h2, h3{
-  margin: 0;
-  font-family: "Intro Rust", sans-serif;
-  color: #353535;
+    margin: 0;
+    font-family: "Intro Rust", sans-serif;
+    color: #353535;
+}
+.split-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.split-content-container {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    margin: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .wordcloud {
+        display: none;
+    }
 }
