Add functionality for adding/removing favorite artists

--- a/website/src/app/components/dialog/dialog.component.html
+++ b/website/src/app/components/dialog/dialog.component.html
@@ -5,7 +5,9 @@
 		</div>
 		<div class="left-dialog">
 			<h3>Artist</h3>
-			<h1>{{data[0].name}}</h1>
+			<h1>
+                {{data[0].name}}
+            </h1>
 			<p id="genres-dialog">Genres: {{data[0].genres.slice(0,4).join(', ')}}</p>
 			<p id="popularity-dialog">Popularity: {{data[0].popularity}}</p>
 		</div>
