--- a/website/src/app/components/artist/artist.component.css
+++ b/website/src/app/components/artist/artist.component.css
@@ -6,6 +6,7 @@
     height: 20px;
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    cursor: pointer;
 }
 
 .favorite-toggled {
