add responsive design, also fix centering

--- a/website/src/app/components/login/login.component.css
+++ b/website/src/app/components/login/login.component.css
@@ -55,7 +55,7 @@ button:hover {
 	cursor: pointer;
 }
 
-.container {
+.left-container {
 	padding: 20px;
     margin: 10px;
     text-align: center;
