--- a/website/src/app/components/login/login.component.html
+++ b/website/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="left-container">
 	<div class="wrapper">
 		<img src="./assets/images/logo.png" alt="logo" class="logo"/>
 		<p id="errorText">{{result}}</p>
