--- a/website/src/app/components/register/register.component.html
+++ b/website/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="left-container">
 	<div class="wrapper">
 		<form (ngSubmit)="onSubmit()" class="form">
 			<h1>Register User</h1>
