--- a/website/src/app/components/search-page/search-page.component.html
+++ b/website/src/app/components/search-page/search-page.component.html
@@ -4,5 +4,6 @@
 </div>
 <br>
 
-<app-search-result [searchType]="searchType" [search]="searchInput" [sort]="sort" [sortType]="sortType" [filterList]="filterList" #child></app-search-result>
+<app-search-result [searchType]="searchType" [search]="searchInput" [sort]="sort" [sortType]="sortType"
+                   [filterList]="filterList" #child></app-search-result>
 
