--- a/website/src/app/components/search-page/search-page.component.css
+++ b/website/src/app/components/search-page/search-page.component.css
@@ -1,6 +1,5 @@
 .search-top-content {
 }
-
 .input-search {
   width: 300px;
   height: 30px;
@@ -9,8 +8,17 @@
   text-align: center;
   font-family: "Intro Rust";
   color: #5a5a5a;
-  margin: 10px;
 }
 .input-search-wrapper {
-  display: inline-block;
+    width: 300px;
+    margin: 20px;
+    margin-bottom: 0px;
+}
+
+
+@media screen and (max-width: 864px) {
+    .input-search-wrapper {
+        margin: 20px auto;
+        margin-bottom: 0px;
+    }
 }
