--- a/website/src/app/shared/navbar-profile/navbar-profile.component.html
+++ b/website/src/app/shared/navbar-profile/navbar-profile.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="user">
-	<div class="navbar-bottom-container">
-		<div class="nav-bottom-left-container">
+	<div class="left-container">
+		<div class="left-container">
 			<div class="nav-bottom-left">
 				<h3 class="title-blue">{{user.username}}s page</h3>
 				<div class="under-line"></div>
