add design fixes for responsive design

--- a/website/src/app/components/search-result/search-result.component.css
+++ b/website/src/app/components/search-result/search-result.component.css
@@ -5,5 +5,10 @@
 .result-container > div {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
+    justify-content: center;
+}
+
+.result-container > div:after {
+    content: "";
+    width: 320px;
 }
