--- a/website/src/app/components/dialog/dialog.component.css
+++ b/website/src/app/components/dialog/dialog.component.css
@@ -25,12 +25,13 @@
 
 #type-dialog {
     color: rgb(156, 43, 66);
+    margin-bottom: 0;
 }
 
 #click-on-albums {
     font-size: 14px;
     margin-top: 0;
-
+    color: rgb(90, 90, 90);
 }
 
 
