--- a/website/src/app/components/favorite-artists/favorite-artists.component.html
+++ b/website/src/app/components/favorite-artists/favorite-artists.component.html
@@ -23,7 +23,7 @@
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;"
+                <mat-row id="favorite-row" *matRowDef="let row; columns: displayedColumns;"
                          (click)="handleRowClick(row)"
                 >
                 </mat-row>
