--- a/website/src/app/components/search-history-list/search-history-list.component.html
+++ b/website/src/app/components/search-history-list/search-history-list.component.html
@@ -21,7 +21,7 @@
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            <mat-row id="history-row" *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
     </div>
 </div>
