--- a/website/src/app/components/dialog/dialog.component.html
+++ b/website/src/app/components/dialog/dialog.component.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div id="modal-album-dialog" [style.width.px]="divWidth">
+    <div id="modal-album-dialog">
         <div *ngFor="let album of data[1];" class="album-info-dialog">
             <div class="img-dialog">
                 <img class="album-img-dialog" (click)="intoView(album);"
