--- a/website/src/app/components/dialog/dialog.component.css
+++ b/website/src/app/components/dialog/dialog.component.css
@@ -5,7 +5,6 @@
 .modal-artist-dialog {
 	display: flex;
 	flex-direction: row;
-
 	width: 100%;
 	position: relative;
 }
@@ -197,6 +196,9 @@
     }
     #album-info-dialog h3 {
         font-size: 25px;
+    }
+    #modal-album-dialog {
+        justify-content: center;
     }
 
 }
