--- a/website/src/app/components/search-history-list/search-history-list.component.html
+++ b/website/src/app/components/search-history-list/search-history-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="data?.length > 0; else noHistory">
-    <div class="example-container mat-elevation-z8">
+    <div class="example-container3 mat-elevation-z8">
         <mat-table #table [dataSource]="dataSource">
 
             <!-- type Column -->
