--- a/website/src/app/components/favorite-artists/favorite-artists.component.html
+++ b/website/src/app/components/favorite-artists/favorite-artists.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="user">
     <div *ngIf="user.favorite_artists?.length > 0; else noFavArtist">
-        <div class="example-container mat-elevation-z8">
+        <div class="example-container2 mat-elevation-z8">
             <mat-table #table [dataSource]="dataSource">
 
                 <!-- type Column -->
