fix css for profile page, restructure how the subpages of profilepage are loaded

--- a/website/src/app/components/my-info/my-info.component.css
+++ b/website/src/app/components/my-info/my-info.component.css
@@ -47,14 +47,13 @@
 
 .split-content-container {
     max-width: 500px;
-    min-width: 400px;
     width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    margin: 10px;
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 600px) {
