--- a/website/src/app/shared/navbar-profile/navbar-profile.component.css
+++ b/website/src/app/shared/navbar-profile/navbar-profile.component.css
@@ -1,40 +1,62 @@
 .title-blue {
-	color: #13738c;
-	margin: 5px;
+    color: #13738c;
+    margin: 5px;
 }
 .under-line {
-	width: 200px;
-	height:5px;
-	background-color: #13738c;
+    width: 200px;
+    height:5px;
+    background-color: #13738c;
+}
+.navbar-search {
+    background-color: white;
+    font-family: "Intro Rust", sans-serif;
+}
+.container {
+    background-color: white;
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-top: -20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .left-container {
-	background-color: white;
-	margin-left: -20px;
-	margin-right: -20px;
-	margin-top: -20px;
-	display: flex;
-}
-.left-container {
-	flex: 1 1 auto;
+    width: 300px;
 }
 .nav-bottom-left {
-	margin-left: 20px;
+    margin-left: 20px;
 }
 .nav-bottom-left ul {
-	display: flex;
-	margin: 0;
-	padding: 0;
-	font-size: 13px;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    font-size: 13px;
 }
 .nav-bottom-left ul li a {
-	display: block;
-	color: #5a5a5a;
-	transition: all .4s ease-in-out;
+    display: block;
+    color: #5a5a5a;
+    transition: all .4s ease-in-out;
+}
+.nav-bottom-left ul #first {
+    padding-left: 0;
 }
 .nav-bottom-left ul li a:hover {
-	color: black;
+    color: black;
 }
 .nav-bottom-left ul li {
-	list-style-type: none;
-	padding: 10px;
+    list-style-type: none;
+    padding: 10px;
+}
+.search-type-selectors a:hover {
+    cursor: pointer;
+}
+.selected-type {
+    color: black !important;
+    font-size: 16px;
+}
+
+@media screen and (max-width: 864px) {
+    .container {
+        flex-direction: column;
+        margin: 0;
+    }
 }
