change from search history to view history

--- a/website/src/app/shared/navbar-profile/navbar-profile.component.html
+++ b/website/src/app/shared/navbar-profile/navbar-profile.component.html
@@ -6,7 +6,7 @@
                 <div class="under-line"></div>
                 <ul class="search-type-selectors">
                     <li id="first"><a [ngClass]="{'selected-type' : underPage == 'my-info'}" routerLink="my-info" routerLinkActive="disabled" data-name="my-info" (click)="selectUnderPage($event)">My info</a></li>
-                    <li><a [ngClass]="{'selected-type' : underPage == 'history'}" routerLink="history" routerLinkActive="disabled" data-name="history" (click)="selectUnderPage($event)">Search history</a></li>
+                    <li><a [ngClass]="{'selected-type' : underPage == 'history'}" routerLink="history" routerLinkActive="disabled" data-name="history" (click)="selectUnderPage($event)">View history</a></li>
                 </ul>
             </div>
         </div>
