fix frontend tests

--- a/website/src/app/components/login/login.component.html
+++ b/website/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
 			<input type="text" placeholder="Username" name="username" class="input" [(ngModel)]="username">
 			<label>Password</label>
 			<input type="password" placeholder="Password" name="password" class="input" [(ngModel)]="password">
-			<button type="submit">Login</button>
+			<button name="button1" type="submit">Login</button>
 		</form>
 		<p><a routerLink="/register" routerLinkActive="disabled">Don't have a user? Click here to register</a></p>
 	</div>
